deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vittinho46
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
        - name: vittinho46
          image: vittormaciel/vittinho46:latest
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: vittinho46
spec:
  type: ClusterIP
  selector:
    bb: web
  ports:
    - port: 8080
      targetPort: 8080
